--- a/src/app/run/headless/headless.component.html
+++ b/src/app/run/headless/headless.component.html
@@ -81,7 +81,7 @@
                 <router-outlet></router-outlet>
         }
       } @else {
-        This app is under maintenance
+        {{lang()=='ms'?'Aplikasi ini sedang diselenggara':'This app is under maintenance'}}
       }
     }
   }
