--- a/src/app/run/_component/navigate-dialog/navigate-dialog.component.html
+++ b/src/app/run/_component/navigate-dialog/navigate-dialog.component.html
@@ -1,10 +1,13 @@
 <div class="modal-header" style="text-align: center">
-    <h3 class="modal-title">Unsaved changes</h3>
+    <h3 class="modal-title">{{lang()=='ms'?'Perubahan tidak disimpan':'Unsaved changes'}}</h3>
 </div>
 <div class="modal-body">
-    <p>There are unsaved changes in the form. Are you sure you want to navigate away without saving?</p>
+    <p>
+        {{lang()=='ms'?'Terdapat perubahan yang tidak disimpan dalam borang. Adakah anda pasti mahu meninggalkan halaman ini tanpa menyimpan?':
+        'There are unsaved changes in the form. Are you sure you want to navigate away without saving?'}}
+        </p>
 </div>
 <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-default" (click)="activeModal.close(true)">Yes, navigate</button>
-    <button type="button" class="btn btn-round btn-primary" (click)="activeModal.close(false)">Stay on Page</button>
+    <button type="button" class="btn btn-round btn-default" (click)="activeModal.close(true)">{{lang()=='ms'?'Ya, tinggalkan halaman':'Yes, navigate'}}</button>
+    <button type="button" class="btn btn-round btn-primary" (click)="activeModal.close(false)">{{lang()=='ms'?'Kekal di halaman':'Stay on Page'}}</button>
 </div>
