--- a/src/app/run/profile/profile.component.html
+++ b/src/app/run/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="viewport ">
   <page-title>
-    <h4 class="m-0">Profile</h4>
+    <h4 class="m-0">{{lang()=='ms'?'Profil':'Profile'}}</h4>
   </page-title>
   @if (user()){
     <div class="limit-width m-a pb-3 ps-2 pe-2" style="max-width:720px">
@@ -12,7 +12,8 @@
         <div class="list-group list-group-flush">
           @if (app()?.x?.userFromApp) {
             <div class="list-group-item bg-light text-muted">
-              <fa-icon [icon]="['fas','info-circle']" [fixedWidth]="true"> </fa-icon> User profile is managed in other app
+              <fa-icon [icon]="['fas','info-circle']" [fixedWidth]="true"> </fa-icon> 
+              {{lang()=='ms'?'Profil pengguna diurus dalam aplikasi lain':'User profile is managed in other app'}}              
             </div>
           }
           <div class="list-group-item">
@@ -35,16 +36,22 @@
           }
           <div class="list-group-item">
             <a class="pointer text-primary" style="text-decoration: none;" (click)="removeAcc()">
-              <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon> Remove My Account
-              <div><small>Once removed, you will not be able to use this app and will be logged out immediately</small>
+              <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon> {{lang()=='ms'?'Padam Akaun':'Remove My Account'}}
+              <div><small>{{lang()=='ms'?
+              'Setelah dipadam, anda tidak akan dapat menggunakan aplikasi ini dan akan dilog keluar serta-merta':
+              'Once removed, you will not be able to use this app and will be logged out immediately'}}</small>
               </div>
             </a>
           </div>
           @if (user()?.once!==null && app()?.id) {
             <div class="list-group-item">
               <a class="pointer text-primary" style="text-decoration: none;" (click)="revokeTerm()">
-                <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon> Term(s) accepted (click to revoke)
-                <div><small>Once revoked, you will not be able to use this app and will be logged out immediately</small>
+                <fa-icon [icon]="['fas','check']" [fixedWidth]="true"></fa-icon> {{lang()=='ms'?'Terma diterima (klik untuk batal)':'Term(s) accepted (click to revoke)'}}
+                <div><small>
+                  {{lang()=='ms'?
+                  'Setelah dibatalkan, anda tidak akan dapat menggunakan aplikasi ini dan akan dilog keluar serta-merta':
+                  'Once revoked, you will not be able to use this app and will be logged out immediately'}}
+                  </small>
                 </div>
               </a>
             </div>
@@ -52,7 +59,7 @@
           @if (user()?.provider == 'local') {
             <div class="list-group-item">
               <a class="pointer text-primary" (click)="changePwd(changePwdTpl)">
-                <fa-icon [icon]="['fas','edit']" [fixedWidth]="true"></fa-icon> Change password
+                <fa-icon [icon]="['fas','edit']" [fixedWidth]="true"></fa-icon> {{lang()=='ms'?'Tukar kata laluan':'Change Password'}}
               </a>
             </div>
           }
@@ -62,15 +69,17 @@
 
       <div class="mt-3">
         <button class="btn btn-danger w-100" role="button" (click)="logout()">
-            <fa-icon [icon]="['fas','sign-out-alt']" [fixedWidth]="true"></fa-icon> Logout
+            <fa-icon [icon]="['fas','sign-out-alt']" [fixedWidth]="true"></fa-icon> {{lang()=='ms'?'Log keluar':'Logout'}}
         </button>
       </div>
       @if (app()?.id) {
         <div class="repo-title mt-3 text-center text-muted">
-          Notifications
+          {{lang()=='ms'?'Notifikasi':'Notifications'}}
         </div>
         @if (notifList().length==0) {
-          <h4 class="p-4 text-muted text-center">No notification at the moment</h4>
+          <h4 class="p-4 text-muted text-center">{{lang()=='ms'?
+          'Tiada notifikasi buat masa sekarang':
+          'No notification at the moment'}}</h4>
         }@else{
           <div class="card mt-2">
             <div class="list-group list-group-flush">
@@ -88,8 +97,8 @@
       }
       @if (pushSubs().length>0) {
         <div class="repo-title mt-3 text-center text-muted">
-          Push Notification Subscription
-          <div class="small">Click to unsubscribe</div>
+          {{lang()=='ms'?'Penerimaan Pemberitahuan':'Push Notification Subscription'}}
+          <div class="small">{{lang()=='ms'?'Klik untuk nyahterima':'Click to unsubscribe'}}</div>
         </div>
         <div class="card mt-2">
           <div class="list-group list-group-flush">
@@ -98,7 +107,7 @@
                 role="button" (click)="unsubscribeToNotifications(sub.endpoint)">
                 <span>{{sub.client.userAgent.family}} on {{sub.client.os.family}} {{sub.client.os.major}} (Device:
                 {{sub.client.device.family}})</span>
-                <div class="small"><i>since {{sub.timestamp|date}}</i></div>
+                <div class="small"><i>{{lang()=='ms'?'dari':'since'}} {{sub.timestamp|date}}</i></div>
               </div>
             }
           </div>
@@ -110,11 +119,11 @@
 <ng-template #notifTpl let-c="close" let-d="dismiss">
   <div class="list-group list-group-flush">
     <div class="list-group-item">
-      <div class="label-span">From</div>
+      <div class="label-span">{{lang()=='ms'?'Dari':'From'}}</div>
       <div>{{notif().sender}}</div>
     </div>
     <div class="list-group-item">
-      <div class="label-span">Timestamp</div>
+      <div class="label-span">{{lang()=='ms'?'Masa':'Timestamp'}}</div>
       <div>{{notif().timestamp|date:'medium'}}</div>
     </div>
     <div class="list-group-item">
@@ -129,51 +138,51 @@
 </ng-template>
 <ng-template #changePwdTpl let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title">Change Password</h4>
+    <h4 class="modal-title">{{lang()=='ms'?'Tukar Kata Laluan':'Change Password'}}</h4>
   </div>
   <div class="modal-body fix-gutter" #changePwdForm="ngForm" ngForm>
     <div class="form-group mb-3">
-      <label>Old Password</label>
+      <label>{{lang()=='ms'?'Kata Laluan Lama':'Old Password'}}</label>
       <input type="password" class="form-control" [ngModel]="changePwdData && changePwdData.password" (ngModelChange)="changePwdData && (changePwdData.password = $event)"
         #password="ngModel" name="password" required>
       @if (password?.invalid) {
         <small class="form-text has-warning">
           @if (password?.errors?.required) {
-            <span class="help-block">Password is required</span>
+            <span class="help-block">{{lang()=='ms'?'Kata laluan lama diperlukan':'Old password is required'}}</span>
           }
         </small>
       }
     </div>
     <div class="form-group mb-3">
-      <label>New Password</label>
+      <label>{{lang()=='ms'?'Kata Laluan Baru':'New Password'}}</label>
       <input type="password" class="form-control" [ngModel]="changePwdData && changePwdData.passwordNew1" (ngModelChange)="changePwdData && (changePwdData.passwordNew1 = $event)"
         #passwordNew1="ngModel" name="passwordNew1" required>
       @if (passwordNew1?.invalid) {
         <small class="form-text has-warning">
           @if (passwordNew1?.errors?.required) {
-            <span class="help-block">New Password is required</span>
+            <span class="help-block">{{lang()=='ms'?'Kata laluan baru diperlukan':'New Password is required'}}</span>
           }
         </small>
       }
     </div>
     <div class="form-group mb-3">
-      <label>New Password (confirm)</label>
+      <label>{{lang()=='ms'?'Kata Laluan Baru (kepastian)':'New Password (confirmation)'}}</label>
       <input type="password" class="form-control" [ngModel]="changePwdData && changePwdData.passwordNew2" (ngModelChange)="changePwdData && (changePwdData.passwordNew2 = $event)"
         #passwordNew2="ngModel" name="passwordNew2" required>
       @if (passwordNew2?.invalid) {
         <small class="form-text has-warning">
           @if (passwordNew2?.errors?.required) {
-            <span class="help-block">New Password is required</span>
+            <span class="help-block">{{lang()=='ms'?'Kata laluan baru diperlukan':'New Password is required'}}</span>
           }
         </small>
       }
     </div>
   </div>
   <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+    <button type="button" class="btn btn-round btn-secondary" (click)="d()">{{lang()=='ms'?'Tutup':'Close'}}</button>
     <button type="button" class="btn btn-round btn-primary" [disabled]="changePwdForm.invalid"
       (click)="c(changePwdData)">
-      Change Password
+      {{lang()=='ms'?'Tukar Kata Laluan':'Change Password'}}
     </button>
   </div>
 </ng-template>
